# secure_coding_platform

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  refactor_prompts.patch  setup.bat  setup.sh  worker.Dockerfile
.agent/: PROJECT_STRUCTURE.md  agent_instructions.md  features.md  grafana_logging.md  mcp.md  project_structure.md  scanning_flow.md
.agent/runbooks/: disk-fill.md
.agent/work/: add-deepseek-grok-llm-support-discovery.md  add-deepseek-grok-llm-support-plan.md  add-deepseek-grok-llm-support-runlog.md  add-deepseek-grok-llm-support-security-review.md  add-deepseek-grok-llm-support-threat-model.md  add-deepseek-grok-llm-support-verifier.md  close-disk-fill-class-adr.md  close-disk-fill-class-discovery.md  close-disk-fill-class-plan.md  close-disk-fill-class-runlog.md  close-disk-fill-class-security-review.md  close-disk-fill-class-threat-model.md  close-disk-fill-class-verifier.md  improve-scan-methodology-research-analysis.md  improve-scan-methodology-research-discovery.md  improve-scan-methodology-research-runlog.md
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  evals.yml
alembic/: env.py
alembic/versions/: 016969003384_create_initial_consolidated_schema.py  2025_06_15_2009_create_initial_consolidated_schema.py  2025_06_21_1450_add_repositorymapcache_table.py  2025_06_21_1731_add_dynamic_pricing_and_tokenizer_to_.py  2025_06_21_1808_add_estimated_cost_to_codesubmission.py  2025_06_21_2254_add_report_fields_to_codesubmission.py  2025_06_24_2122_add_excluded_files_to_submission.py  2025_06_26_2305_add_server_default_to_submitted_at_on_.py  2025_06_27_1810_add_project_name_to_codesubmission_model.py  2025_06_29_0020_add_risk_score_and_fixed_code_map_to_.py  2025_07_01_2047_add_original_snippet_with_default.py  2025_07_01_2309_add_title_to_vulnerability_findings.py  2025_07_07_1944_create_project_centric_schema.py  2025_07_07_2332_add_llm_configs_and_frameworks_to_scan_.py  2025_07_10_1328_add_risk_score_to_scan_table.py  2025_07_10_1335_add_file_path_to_llm_interaction_table.py  2025_07_10_1403_add_confidence_to_finding_table.py  2025_07_10_1409_add_references_to_finding_table.py  2025_07_10_1930_add_framework_agent_and_prompt_template_.py  2025_07_11_0309_add_llm_config_id_to_chat_sessions_and_.py  2025_07_15_1934_add_agent_name_to_findings_table.py  2025_07_15_2251_add_analysis_artifact_columns_to_scans.py  2025_07_17_0024_add_rag_preprocessing_jobs_table.py  2025_07_17_0037_add_raw_content_to_rag_preprocessing_.py  2025_07_17_0042_add_raw_content_to_rag_preprocessing_.py  2025_07_17_1133_removed_tokenizer_encoding_field.py  2025_07_19_1541_add_cwe_details_owasp_mapping_and_cvss_.py  2025_07_19_2118_add_is_applied_in_remediation_to_.py  2025_07_19_2317_modified_llm_ids_to_utility_llm_config_.py  2025_07_20_1901_add_tokenizer_to_llm_configs.py  2026_02_19_0811_add_system_configurations_table.py  2026_02_19_1119_initial_migration.py  2026_02_19_1121_create_users_table.py  2026_04_19_1200_add_scan_outbox_table.py  2026_04_19_1400_add_prompt_template_variant.py  2026_04_20_0900_drop_prompt_templates_name_unique.py  2026_04_24_0342_add_user_groups_and_memberships.py  2026_04_25_2003_drop_sarif_report_impact_report_from_.py  2026_04_26_0459_add_findings_source.py  2026_04_26_0706_partial_findings_source_index_where_not_.py  (+15 more)
data/owasp/: agentic_top10_2026.json  llm_top10_2025.json
docs/: docusaurus.config.js  rule-source-ingestion.md  sidebars.js
docs/docs/: faq.md  intro.md  roadmap.md
docs/docs/api-reference/: authentication.md  code-analysis-endpoints.md  index.md  llm-configuration.md  results-endpoints.md
docs/docs/architecture/: agent-system.md  backend-services.md  data-flow.md  frontend-services.md  llm-integration.md  overview.md  rag-system.md
docs/docs/developer-guide/: index.md
docs/docs/development/: adding-new-agents.md  coding-standards.md  contributing.md  testing-strategy.md  updating-framework-knowledge.md
evals/: README.md  package-lock.json  package.json  promptfooconfig.shared.yaml
evals/providers/: live.config.yaml  mock.js
fluentd/: Dockerfile  fluentd.conf
loki/: loki-config.yaml
rabbitmq/: definitions.json  init.sh  rabbitmq.conf
scripts/: create_superuser.py  extract_eval_prompts.py  generate_secrets.py  reset_app_state.py  reset_superuser.py  verify_setup.py  verify_setup_and_cors.py
secure-code-ui/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx-entrypoint.sh  nginx-http.conf  nginx-https.conf  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
secure-code-ui/src/: App.tsx  index.css  main.tsx
src/app/: main.py
tests/: conftest.py  test_admin_findings_router.py  test_compliance_service.py  test_consumer_resume_kind.py  test_cost_estimation.py  test_default_seed_service.py  test_env_example_no_new_provider_keys.py  test_fast_llm_tier_removal.py  test_finding_source_roundtrip.py  test_findings_source_sweeper.py  test_generic_specialized_agent.py  test_llm_client_langfuse_failopen.py  test_llm_client_provider_factory.py  test_llm_config_provider_allowlist.py  test_observability_langfuse_client.py  test_observability_mask.py  test_owasp_top10_ingest.py  test_prescan_approval_sweeper.py  test_qdrant_api_key_mandatory.py  test_rag_dual_write_failopen.py  test_rag_embedder_parity.py  test_rag_factory.py  test_rag_qdrant_filter_translator.py  test_rag_qdrant_init_redacts_api_key.py  test_risk_score.py  test_scan_progress_bus.py  test_scanners_bandit_runner.py  test_scanners_binary_discovery.py  test_scanners_gitleaks_runner.py  test_scanners_osv_runner.py  test_scanners_semgrep_runner.py  test_scanners_staging.py  test_scripts_isolation.py  test_seed_endpoint.py  test_semgrep_parser.py  test_semgrep_scan_path.py  test_semgrep_selector.py  test_ui_setup.py  test_verify_patches_node.py  test_worker_graph_imports.py  (+2 more)
tools/df-emitter/: Dockerfile  README.md  emit.sh
(+395 files in other folders)
