[tool.poetry]
name = "secure_coding_platform"
version = "0.1.0"
description = "AI-powered open-source platform for secure code analysis, generation, and multi-framework compliance."
authors = ["dev@nerdykrishna.com"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
# This project requires Python 3.12.x
aio-pika = ">=9.5.5,<10.0.0"
alembic = ">=1.16.1,<2.0.0"
anthropic = "^0.55.0"
asyncpg = ">=0.30.0,<0.31.0"
chromadb = "0.5.3" # Vector DB - Pinned to match server version
cryptography = "^45.0.4"
email-validator = ">=2.2.0,<3.0.0" # Useful for FastAPI Users
fastapi = ">=0.115.9,<0.116.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
gitpython = "^3.1.44"
google-api-core = "^2.24.2"
google-genai = "^1.16.1"
itsdangerous = ">=2.2.0,<3.0.0"
langchain = "^0.3.25"
langchain-anthropic = "^0.3.15"
langchain-core = ">=0.3.61,<0.4.0"
langchain-google-genai = "^2.1.5"
langchain-openai = ">=0.3.18,<0.4.0"
langgraph = ">=0.4.7,<0.5.0"
langgraph-checkpoint-postgres = "^2.0.21"
networkx = "^3.5"
pandas = "^2.3.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
pika = ">=1.3.2,<2.0.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}
psycopg2-binary = ">=2.9.10,<3.0.0" # For Alembic sync
pydantic = ">=2.11.5,<3.0.0"
pydantic-settings = "^2.9.1"
python = "~3.12"
python-dotenv = ">=1.1.0,<2.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.4.0,<4.0.0"}
sentence-transformers = "^4.1.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.41,<3.0.0"}
tiktoken = "^0.9.0"
tree-sitter = ">=0.21.0,<0.22.0"
tree-sitter-languages = "^1.10.2"
uvicorn = {extras = ["standard"], version = ">=0.34.2,<0.35.0"}
python-multipart = "^0.0.20"
xhtml2pdf = "^0.2.17"
cvss = "^3.4"
torch = { version = ">=2.2.0,<3.0.0", source = "pytorch-cpu", markers = "sys_platform == 'linux'" }


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
black = "^25.1.0"
# black = "^24.4.2"
mypy = "^1.10.0"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"] # Ignore line length violations as we let black/ruff format handle it best effort
pytest = "^8.3.5"
pytest-asyncio = "^0.23.7"
[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
