[tool.poetry]
name = "secure_coding_platform"
version = "0.1.0"
description = "SCCAP — Secure Coding & Compliance Automation Platform. Open-source AI-powered code auditing, remediation, and compliance tooling."
authors = ["dev@nerdykrishna.com"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
# This project requires Python 3.12.x
# Core deps: everything the API container needs at runtime. The heavy
# ML / AST-parsing stack lives in the optional "worker" group below and
# is only installed in the worker image.
aio-pika = ">=9.5.5,<10.0.0"
alembic = ">=1.16.1,<2.0.0"
anthropic = ">=0.96.0,<1.0.0"
asyncpg = ">=0.30.0,<0.31.0"
chromadb = "0.5.3" # Vector DB - Pinned to match server version
cryptography = "^45.0.4"
email-validator = ">=2.2.0,<3.0.0" # Useful for FastAPI Users
fastapi = ">=0.115.9,<0.116.0"
fastapi-mail = "^1.4.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
gitpython = "^3.1.44"
google-api-core = "^2.24.2"
google-genai = "^1.16.1"
itsdangerous = ">=2.2.0,<3.0.0"
# Phase I.1 — LangChain 1.x line. langchain-core 1.3 is the first release
# of the 1.x series we align to; picks up: standardized `response.usage_metadata`
# across providers, LangGraph 1.x compatibility, native support for Gemini 3.x
# via langchain-google-genai 4.2.2, and structured-output strategies that
# removed the need for our provider-specific fallbacks.
langchain-anthropic = "^1.4.1"
langchain-core = "^1.3.0"
langchain-google-genai = "^4.2.2"
langchain-openai = "^1.2.0"
langgraph = "^1.1.9"
langgraph-checkpoint-postgres = "^3.0.5"
networkx = "^3.5"
pandas = "^2.3.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
pika = ">=1.3.2,<2.0.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}
psycopg2-binary = ">=2.9.10,<3.0.0" # For Alembic sync
pydantic = ">=2.11.5,<3.0.0"
pydantic-settings = "^2.9.1"
python = "~3.12"
python-dotenv = ">=1.1.0,<2.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.4.0,<4.0.0"}
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.41,<3.0.0"}
tiktoken = "^0.9.0"
uvicorn = {extras = ["standard"], version = ">=0.34.2,<0.35.0"}
python-multipart = "^0.0.20"
xhtml2pdf = "^0.2.17"
cvss = "^3.4"


# Worker-only deps: ML inference (torch, sentence-transformers) and AST
# parsing (tree-sitter). None of these are imported by app.main; they
# only load inside workflows/worker_graph.py and the RAG preprocessor,
# which run in the worker container. Marked optional=true so
# `poetry install` (as used by the api image) doesn't pull them; the
# worker image installs with `poetry install --with worker`.
[tool.poetry.group.worker]
optional = true

[tool.poetry.group.worker.dependencies]
sentence-transformers = "^4.1.0"
tree-sitter = ">=0.21.0,<0.22.0"
tree-sitter-languages = "^1.10.2"
torch = { version = ">=2.2.0,<3.0.0", source = "pytorch-cpu", markers = "sys_platform == 'linux'" }


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
black = "^25.1.0"
# black = "^24.4.2"
mypy = "^1.10.0"

# Test deps live in their own optional group so runtime images don't ship
# them. Install with `poetry install --with test` locally or in CI.
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.23.7"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"] # Ignore line length violations as we let black/ruff format handle it best effort

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
